# WEATHER-VESSEL

./: .env.example  .gitignore  CHANGELOG.md  PATCH.MD  Plan.md  README.md  logistics_control_tower_v2.html  openai_gateway.py  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt  sample_jobs.csv  sample_timeseries.csv  vercel.json
app/: page.tsx
app/api/assistant/: route.ts
app/api/briefing/: route.ts
app/api/health/: route.ts
app/api/marine/: route.ts
app/api/marine-ops/: route.ts
app/api/report/: route.ts
app/api/vessel/: route.ts
docs/en/: cli.md  usage.md
docs/kr/: cli.md  usage.md
lib/server/: guarded-fetch.ts  ioi.ts  notifier.ts  report-state.ts  vessel-data.ts
python-bridge/: marine_ops_bridge.py
scripts/: health-check.ps1  scheduler.ts
src/marine_ops/: __init__.py
src/marine_ops/core/: __init__.py  bias.py  ensemble.py  qc.py  schema.py  settings.py
src/marine_ops/eri/: __init__.py  compute.py  rules.py
src/wv/: __init__.py  cli.py  config.py
src/wv/core/: __init__.py  fusion.py  models.py  repository.py  risk.py  scheduler.py
src/wv/notify/: __init__.py  email.py  slack.py  telegram.py
src/wv/providers/: __init__.py  base.py  copernicus.py  factory.py  manager.py  noaa_ww3.py  open_meteo.py  stormglass.py
src/wv/utils/: __init__.py  cache.py  logging.py
tests/: test_cache.py  test_cli.py  test_fusion.py  test_http_utils.py  test_notifications.py  test_openai_gateway.py  test_provider_fallback.py  test_provider_parsing.py  test_providers.py  test_repository.py  test_risk.py  test_scheduler.py
tests/marine_ops/: test_connectors.py  test_core_modules.py  test_eri_compute.py
tests/marine_ops/fixtures/: eri_rules.yaml  open_meteo_response.json  stormglass_response.json  worldtides_response.json
