[project]
name = "weather-vessel"
version = "0.1.0"
description = "Marine weather routing and notification toolkit"
readme = "README.md"
authors = [{ name = "Weather Vessel Team" }]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "typer[all]>=0.9",
]

[project.optional-dependencies]
all = [
  "black>=24.0",
  "flake8>=7.0",
  "isort>=5.13",
  "mypy>=1.8",
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.scripts]
wv = "wv.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q --cov=src"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 70.0

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
